53) kernel: ralink_raeth: add kernel option for disable preconfigure p5/p6 at ifup.<br>
54) kernel: ralink_raeth: switch control: enhance MT7621 ESW MIB counters.<br>
55) kernel: ralink_raeth: switch control: improve support MT7620/MT7621 HW IGMP/MLD snooping, add IGMP static port control for AP mode.<br>
56) kernel: ralink_usb: fix broken MT7621 USB PHY calibration (SDK bug).<br>
57) kernel: ralink_sd: MT7620/MT7621/MT7628 SD/MMC driver cleanup, fix unload module with debug enabled.<br>
58) kernel: ralink_gpio: add usb lid blink at usb transfer.<br>
59) kernel: ralink_nvram: add options for config dualband mode nvram(one or different offsets).<br>
60) kernel: huge update NAND framework from upstream.<br>
61) kernel: exfat: add module alias for fix automount.<br>
62) kernel: ipv4: ip_check_defrag should correctly check return value of skb_copy_bits.<br>
63) kernel: ipv6: fix ipv6_cow_metrics for non DST_HOST case.<br>
64) kernel: igmp: add __ip_mc_{join|leave}_group().<br>
65) kernel: pci: leave MEM and IO decoding disabled during 64-bit BAR sizing, too.<br>
66) kernel: sg: fix read() error reporting.<br>
<br>
<br>
<b>2.5.x</b><br>
1) init.d: unify swicth portmap logic.<br>
2) init.d: fix vlan enabled check.<br>
3) init.d: optimize switch reinit procesure.<br>
4) init.d: more human readable variable name and prevent overwrites in dependen logic.<br>
5) init.d: touch switch in some cases make depend at switch parth instead of direct mode check.<br>
6) init.d: switch workaround in kext use config-vlan.sh instead off config-switch.sh.<br>
7) kernel: mips: avoid mcheck by flushing page range in huge_ptep_set_access_flags().<br>
8) kernel: mips: fix branch emulation of branch likely instructions.<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) full russian ui (need help community or employ the web developer).<br>
3) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
<br>
<br>
<br>